Fix the layout not rendering.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerMvc/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Angular2.Mvc.Core.Models.ViewModel.VmCustomer
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <table>
     <tr>
         <td><h3>@ViewBag.Title</h3></td>
