complete the first version of ngrx.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-index.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-index.component.html
@@ -9,7 +9,7 @@
     <button type="button" class="btn btn-secondary">Toys</button>
     <button type="button" class="btn btn-secondary">Music</button>
 </div>-->
-
+<div>Current users : {{counter | async}}</div>
 <table>
     <tr>
         <td>
