--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
@@ -1,3 +1,15 @@
-﻿<div>
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+<script src="~/scripts/customervc.index.js"></script>
+
+
+<div>
     @await Component.InvokeAsync("CustomerVc", new { name = "JB" })
+</div>
+<hr />
+<div id="ajaxCust">
+
 </div>
