Complete the 2nd version ViewComponent sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
@@ -6,10 +6,13 @@
 <script src="~/scripts/customervc.index.js"></script>
 
 
-<div>
+@*<div>
     @await Component.InvokeAsync("CustomerVc", new { name = "JB" })
+</div>*@
+<div>
+    @await Component.InvokeAsync("CustomerVc", new {display="Card",  name = "JB" })
 </div>
 <hr />
-<div id="ajaxCust">
+@*<div id="ajaxCust">
 
-</div>
+</div>*@
