--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Areas/Basic/Views/CustomerVc/Index.cshtml
@@ -5,7 +5,6 @@
 
 <script src="~/scripts/customervc.index.js"></script>
 
-
 @*<div>
     @await Component.InvokeAsync("CustomerVc", new { name = "JB" })
 </div>*@
@@ -13,6 +12,4 @@
     @await Component.InvokeAsync("CustomerVc", new {display="Card",  name = "JB" })
 </div>
 <hr />
-@*<div id="ajaxCust">
-
-</div>*@
+<div id="ajaxCust"></div>
