Create Option inject sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Home/Index.cshtml
@@ -8,6 +8,10 @@
     </div>
 </core-app>
 
+<span class="footer"><i class="fa fa-home"></i>@ViewBag.Title &nbsp; <i class="fa fa-copyright"></i>@ViewBag.Owner</span>
+
+
+
 @section Scripts {
     <script>
         System.config({
