Start ngrx sample.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-books.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-books.component.html
@@ -6,6 +6,7 @@
                 <th  class="text-center">ID</th>
                 <th  class="text-center">Title</th>
                 <th class="text-center">Price</th>
+                <th>Shopping Cart</th>
                 <th></th>
             </tr>
         </thead>
@@ -13,6 +14,7 @@
             <td>{{prod.Id}}</td>
             <td>{{prod.Title}}</td>
             <td>{{prod.Price}}</td>
+            <td><product-booking></product-booking></td>
             <td>
                 <input type="button" value="Edit" class="btn btn-info" (click)="edit(prod)" /> 
                 &nbsp;
