--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/Shared/_Layout.cshtml
@@ -17,10 +17,14 @@
     @*<jl-javascript-logger-definitions />*@
     <script src="~/lib-npm/jsnlog/jsnlog.min.js"></script>
     <script src="~/lib-npm/sweetalert2/sweetalert2.min.js"></script>
-    <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib-npm/ng2-toastr/ng2-toastr.min.js"></script>
+
+
+    <link href="~/lib-npm/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib-npm/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="~/lib-npm/ng2-toastr/ng2-toastr.min.css" rel="stylesheet" />
     <link href="~/app/component/blockUI/blockUI.comp.css" rel="stylesheet" /><!--Must override bootstrap-->
     <link href="~/css/site.css" rel="stylesheet" />
 
