Shopping Cart keep the items.

--- a/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-music.component.html
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/wwwroot/app/component/Basic/Product/product-music.component.html
@@ -25,7 +25,7 @@
             <td>{{prod.Id}}</td>
             <td>{{prod.Title}}</td>
             <td>{{prod.Price}}</td>
-            <td><product-booking [price]="prod.Price" (emit-events)="setShopCart($event)"></product-booking></td>
+            <td><product-booking [product]="prod" (emit-events)="setShopCart($event)"></product-booking></td>
             <td>
                 <input type="button" value="Edit" class="btn btn-info" (click)="edit(prod)" />
                 &nbsp;
