--- a/Angular2.Mvc/src/Angular2.Mvc.Website/Views/_ViewImports.cshtml
+++ b/Angular2.Mvc/src/Angular2.Mvc.Website/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Angular2.Mvc.Website
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper "Angular2.Mvc.Website, Angular2.Mvc.Website"
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
